--- a/portfolio/CSS/style.css
+++ b/portfolio/CSS/style.css
@@ -8,8 +8,9 @@
   --color-white: #ffffff;
   --color-light-white: #eeeeee;
   --color-dark-white: #bdbdbd;
-  --color-pink: #fe918d;
-  --color-dark-pink: #ff6863;
+  --color-blue: #0000ff;
+  --color-sky-blue: #3498db;
+  --color-dark-blue: #00008b;
   --color-dark-grey: #4d4d4d;
   --color-grey: #616161;
   --color-light-grey: #7c7979;
@@ -29,6 +30,9 @@
   --weight-bold: 700;
   --weight-semi-bold: 600;
   --weight-regular: 400;
+
+  /* Size */
+  --size-border-radius: 4px;
 }
 
 /* Universal Tags */
@@ -36,6 +40,23 @@
   box-sizing: border-box;
 }
 
+/* Body */
+body {
+  margin: 0;
+  font-family: Arial, Helvetica, sans-serif;
+  cursor: default;
+}
+
+/* anchor */
+a {
+  text-decoration: none;
+  color: var(--color-white);
+}
+/* ul */
+ul {
+  list-style: none;
+  padding-left: 0;
+}
 /* Typography */
 
 h1 {
@@ -64,4 +85,37 @@ p {
   font-weight: var(--weight-regular);
   color: var(--color-black);
   margin: 4px 0px;
+}
+
+/* Navbar */
+#navbar {
+  display: flex;
+  justify-content: space-between;
+  background-color: var(--color-sky-blue);
+  align-items: center;
+  color: var(--color-white);
+  padding: 16px;
+}
+
+.navbar__menu {
+  display: flex;
+}
+.navbar__logo {
+  font-size: var(--font-medium);
+  font-weight: var(--weight-bold);
+}
+.navbar__menu__item {
+  padding: 8px 12px;
+  margin: 0 4px;
+  cursor: pointer;
+  border-radius: var(--size-border-radius);
+}
+
+.navbar__menu__item.active {
+  border: 1px solid var(--color-dark-white);
+}
+
+.navbar__menu__item:hover {
+  background-color: var(--color-blue);
+  border-radius: 4px;
 }
