--- a/portfolio/CSS/style.css
+++ b/portfolio/CSS/style.css
@@ -18,6 +18,7 @@
   --color-yellow: #fff7d1;
   --color-orange: #feb546;
   --color-black: #000000;
+  --color-neon-green: #39ff14;
 
   /* Font size */
   --font-large: 48px;
@@ -186,8 +187,11 @@ p {
   padding: 50px;
   text-align: center;
   /* 중간 정렬 */
-  max-width: 1200px;
   /* margin이 오른쪽에만 들어간 경우 margin: auto;*/
+  margin: auto;
+}
+.section_container {
+  max-width: 1200px;
   margin: auto;
 }
 .about__majors {
@@ -265,4 +269,53 @@ p {
 .univ__period,
 .work__period {
   font-size: var(--font-micro);
+}
+/* SKills */
+#skills {
+  background-color: var(--color-sky-blue);
+  margin: auto;
+}
+
+.skillset {
+  display: flex;
+  background-color: var(--color-dark-grey);
+  color: var(--color-light-white);
+  margin: 20px 0;
+}
+.skillset_title {
+  color: var(--color-white);
+}
+.skillset_left {
+  flex-basis: 60%;
+  background-color: var(--color-black);
+  padding: 20px;
+}
+.skill_description {
+  display: flex;
+  justify-content: space-between;
+}
+.skill {
+  margin-bottom: 32px;
+}
+.skill_bar {
+  width: 100%;
+  height: 3px;
+  background-color: var(--color-dark-grey);
+}
+.skill_value {
+  width: 100%;
+  height: 3px;
+  background-color: var(--color-neon-green);
+}
+.skillset_right {
+  flex-basis: 40%;
+}
+
+.tools {
+  background-color: var(--color-grey);
+}
+
+.tools,
+.etc {
+  padding: 20px;
 }
