--- a/portfolio/CSS/style.css
+++ b/portfolio/CSS/style.css
@@ -419,3 +419,52 @@ p {
   background-color: var(--color-dark-white);
   position: relative;
 }
+/* Testimonial */
+
+#testimonials {
+  padding: 50px;
+  text-align: center;
+  margin: auto;
+  max-width: 1200px;
+}
+#testimonials {
+  background-color: var(--color-light-white);
+}
+
+.testimonials {
+  margin: 40px;
+}
+
+.testimonial {
+  display: flex;
+  margin: 32px 0;
+}
+
+.testimonial_avartar {
+  width: 150px;
+  height: 150px;
+  border-radius: 50%;
+  margin: 12px;
+}
+
+.testimonial_avartar:nth-child(odd) {
+  margin-right: 40px;
+}
+
+.testimonial_avartar:nth-child(even) {
+  margin-left: 40px;
+}
+
+.testimonial_speachBubble {
+  padding: 18px;
+  background-color: var(--color-white);
+  border-radius: var(--size-border-radius);
+}
+
+.testimonial_speachBubble p {
+  color: var(--color-light-grey);
+}
+
+.testimonial_speachBubble a {
+  color: var(--color-black);
+}
