--- a/portfolio/CSS/style.css
+++ b/portfolio/CSS/style.css
@@ -149,8 +149,16 @@ p {
   background-color: var(--color-blue);
   border-radius: 4px;
 }
+.navbar_toggle-btn {
+  position: absolute;
+  top: 24px;
+  right: 32px;
+  font-size: 24px;
+  color: var(--color-white);
+  display: none;
+}
 
-/*/ /////// Home ///////*/
+/*/ /////// Home /////// */
 #home {
   background: url("../imgs/homeBackground.png") center/cover no-repeat;
   padding: 40px;
@@ -500,4 +508,47 @@ p {
   transform: scale(1.1);
   color: var(--color-dark-blue);
   transition: all var(--animation--duration) ease;
+}
+
+/* For Below 768px screen width */
+@media screen and (max-width: 768px) {
+  .navbar_toggle-btn {
+    display: block;
+  }
+
+  #navbar {
+    flex-direction: column;
+    align-items: flex-start;
+  }
+
+  .navbar__menu {
+    flex-direction: column;
+    text-align: center;
+    width: 120%;
+    display: none;
+  }
+
+  .about__majors {
+    flex-direction: column;
+  }
+  .workPlace,
+  .univPlace {
+    flex-direction: column;
+  }
+
+  .major {
+    margin-bottom: 38px;
+  }
+  .skillset {
+    flex-direction: column;
+  }
+
+  .project {
+    flex-grow: 1;
+  }
+
+  .testimonial_avartar {
+    width: 80px;
+    height: 80px;
+  }
 }
