--- a/portfolio/CSS/style.css
+++ b/portfolio/CSS/style.css
@@ -104,13 +104,20 @@ p {
 
 /*//////// Navbar ///////*/
 #navbar {
+  position: fixed;
   display: flex;
+  width: 100%;
   justify-content: space-between;
-  background-color: var(--color-sky-blue);
+  background-color: transparent;
   align-items: center;
   color: var(--color-white);
-  padding: 16px;
+  padding: 4px;
+  transition: all var(--animation--duration) ease-in-out;
+}
+#navbar.navbar--dark {
+  background-color: var(--color-sky-blue);
   border: var(--color-black) solid 0.05px;
+  padding: 4px;
 }
 
 .navbar__menu {
@@ -162,6 +169,7 @@ p {
 #home {
   background: url("../imgs/homeBackground.png") center/cover no-repeat;
   padding: 40px;
+  padding-top: 120px;
   text-align: center;
 }
 .home__avatar {
