--- a/portfolio/CSS/style.css
+++ b/portfolio/CSS/style.css
@@ -519,6 +519,27 @@ p {
   transition: all var(--animation--duration) ease;
 }
 
+/* Scroll */
+.arrow-up {
+  position: fixed;
+  bottom: 50px;
+  right: 50px;
+  width: 70px;
+  height: 70px;
+  font-size: 50px;
+  background-color: var(--color-sky-blue);
+  color: var(--color-white);
+  border-radius: 50%;
+  opacity: 0;
+  pointer-events: none;
+  transition: all 300ms ease-in;
+}
+
+.arrow-up.visible {
+  opacity: 1;
+  pointer-events: all;
+}
+
 /* For Below 768px screen width */
 @media screen and (max-width: 768px) {
   .navbar_toggle-btn {
