--- a/portfolio/CSS/style.css
+++ b/portfolio/CSS/style.css
@@ -145,17 +145,13 @@ p {
   padding: 8px 12px;
   margin: 0 4px;
   cursor: pointer;
+  border: 1px solid transparent;
   border-radius: var(--size-border-radius);
 }
 
-.navbar__menu__item.active {
-  border: 1px solid var(--color-dark-white);
-  margin: auto;
-}
-
 .navbar__menu__item:hover {
+  border-color: var(--color-white);
   background-color: var(--color-blue);
-  border-radius: 4px;
 }
 .navbar_toggle-btn {
   position: absolute;
@@ -353,12 +349,12 @@ p {
   font-size: var(--font-regular);
   padding: 8px 48px;
 }
-.category__btn.active,
+.category__btn.selected,
 .category__btn:hover {
   background-color: var(--color-sky-blue);
   color: var(--color-white);
 }
-.category__btn.activecategory_count,
+.category__btn.selected.category_count,
 .category__btn:hover .category_count {
   opacity: 1;
   top: 0;
