--- a/portfolio/CSS/style.css
+++ b/portfolio/CSS/style.css
@@ -427,16 +427,17 @@ p {
 }
 
 .project_description h3 {
-  color: var(--color-white);
+  color: var(--color-orange);
 }
 
 .project_description h3:after {
+  font-size: 13px;
   content: "";
   display: block;
   left: 50%;
-  width: 25px;
+  width: 60px;
   height: 2px;
-  margin-left: -12px;
+  transform: translateX(-50%);
   margin-top: 8px;
   background-color: var(--color-dark-white);
   position: relative;
@@ -554,13 +555,22 @@ p {
   #navbar {
     flex-direction: column;
     align-items: flex-start;
+    background-color: var(--color-sky-blue);
   }
 
+  #navbar.navbar--dark {
+    padding: 16px;
+  }
   .navbar__menu {
     flex-direction: column;
     text-align: center;
-    width: 120%;
+    width: 100%;
     display: none;
+  }
+  .navbar__menu.open {
+    text-align: center;
+    display: block;
+    padding-left: 222px;
   }
 
   .about__majors {
@@ -582,7 +592,7 @@ p {
     flex-grow: 1;
   }
 
-  .testimonial_avartar {
+  .testimonial_avatar {
     width: 80px;
     height: 80px;
   }
